deploy/base/bpc-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: bpc
  labels:
    app: bpc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bpc
      deployment: bpc
  template:
    metadata:
      labels:
        app: bpc
        deployment: bpc
    spec:
      imagePullSecrets:
        - name: bpc-image-pull-secret
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      volumes:
        - name: temp-volume
          emptyDir: {}
        - name: work-volume
          emptyDir: {}
      containers:
        - name: bpc
          securityContext:
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          image: ghcr.io/etn-corp/bpc:IMAGE_TAG_HOLDER
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /bpc/bpc.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /bpc/bpc.html
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 1
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
            - containerPort: 8778
              protocol: TCP
          volumeMounts:
            - name: temp-volume
              mountPath: /usr/local/tomcat/temp
            - name: work-volume
              mountPath: /usr/local/tomcat/work
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
