deploy/base/bpc-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bpc
  labels:
    app: bpc
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    app: bpc
    deployment: bpc
  type: ClusterIP
