deploy/base/bpc-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: bpc
  labels:
    app: bpc
spec:
  path: /
  to:
    kind: Service
    name: bpc
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
